--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,26 @@
-main.css
+.form-container {
+	margin : 200px auto 0px auto;
+	height: auto;
+	width: 300px;
+	padding: 30px;
+
+	background-color: #F0F0F0;
+	border-color: #000000;
+	border-radius: 5px;
+	text-align: center;
+}
+
+.form-container form input[type="text"], 
+.form-container form input[type="email"], 
+.form-container form input[type="password"] {
+	height: 50px;
+	width: 100%;
+	margin: 5px auto;
+	border-radius: 5px;
+	border: 1px solid #E0E0E0;
+}
+
+.form-container form input[type="submit"] {
+	height: 50px;
+	width: 100%;
+}
